@@ -21,6 +21,11 @@
 <li><a class="reference" href="http://sourceforge.net/tracker/?group_id=79942&amp;atid=558250">report bugs</a></li>
 <li><a class="reference" href="http://www.sourceforge.net/projects/libtorrent">sourceforge page</a></li>
 </ul>
+<hr class="docutils" />
+<ul class="simple">
+<li><a class="reference" href="http://libtorrent-ruby.rubyforge.org/">ruby bindings</a></li>
+<li><a class="reference" href="http://code.google.com/p/python-libtorrent/">python bindings</a></li>
+</ul>
 </div>
 <div id="libraryBody"><div class="section" id="libtorrent">
 <h1><a name="libtorrent">libtorrent</a></h1>
@@ -54,7 +59,7 @@ library and not a full featured client, although it comes with a working
 </div>
 <div class="section" id="acknowledgements">
 <h2><a name="acknowledgements">Acknowledgements</a></h2>
-<p>Written by Arvid Norberg. Copyright (c) 2003</p>
+<p>Written by Arvid Norberg. Copyright (c) 2003-2006</p>
 <p>Contributions by Magnus Jonsson, Daniel Wallin and Cory Nelson</p>
 <p>Thanks to Reimond Retz for bugfixes, suggestions and testing</p>
 <p>Project is hosted by sourceforge.</p>
